--- a/full-crop-box.html
+++ b/full-crop-box.html
@@ -1,48 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Cropper</title>
-  <link rel="stylesheet" href="css/cropper.css">
-  <style>
-    .container {
-      max-width: 640px;
-      margin: 20px auto;
-    }
+<meta charset="utf-8">
+<meta http-equiv="x-ua-compatible" content="ie=edge">
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<title>Cropper</title>
+<link rel="stylesheet" href="css/cropper.css">
+<style>
+.container {
+	user-select: none;
+	width: 360px;
+	/* 	height: auto; */
+	margin: 40px auto;
+}
 
-    img {
-      max-width: 100%;
-    }
-  </style>
+.circle-guide {
+	pointer-events: none;
+	width: 300px;
+	height: 300px;
+	border-radius: 50%;
+	border: 2px dashed white;
+	position: relative;
+	top: -330px;
+	left: 30px;
+}
+
+img {
+	overflow: hidden;
+	width: 360px; /* トリミングしたい枠の幅 */
+	height: 360px; /* トリミングしたい枠の高さ */
+	position: center;
+}
+
+.btn-upload {
+	top: -330px;
+}
+
+.docs-tooltip {
+	display: block;
+	margin: -.5rem -.75rem;
+	padding: .5rem .75rem;
+}
+
+.docs-tooltip>.icon {
+	margin: 0 -.25rem;
+	vertical-align: top;
+}
+
+.btn-upload .tooltip-inner, .btn-toggle .tooltip-inner {
+	white-space: nowrap;
+}
+
+.cropper-view-box, .cropper-face {
+	border-radius: 50%;
+}
+</style>
 </head>
 <body>
 
-  <div class="container">
-    <h1>Cropper with full crop box</h1>
-    <div>
-      <img id="image" src="img/picture.jpg" alt="Picture">
-    </div>
-  </div>
+	<div class="container">
+		<h1>缶バッチ アプリ</h1>
+		<input type="file" class="avatar-input" id="avatarInput"
+			name="avatar_file">
+		<div>
+			<img id="image" src="img/responsive_img.jpg" alt="Picture">
+		</div>
+		<div class="circle-guide"></div>
+	</div>
 
-  <!-- Scripts -->
-  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
-  <script src="js/cropper.js"></script>
-  <script>
-    $(function () {
-      $('#image').cropper({
-        viewMode: 3,
-        dragMode: 'move',
-        autoCropArea: 1,
-        restore: false,
-        modal: false,
-        guides: false,
-        highlight: false,
-        cropBoxMovable: false,
-        cropBoxResizable: false
-      });
-    });
-  </script>
+	<!-- Scripts -->
+	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
+	<script>
+		$(function() {
+			$('#image').cropper({
+				viewMode : 3,
+				aspectRatio : 1,
+				dragMode : 'move',
+				autoCropArea : 1,
+				restore : true,
+				modal : true,
+				guides : false,
+				highlight : true,
+				cropBoxMovable : false,
+				cropBoxResizable : false
+			});
+		});
+	</script>
+	<script src="js/cropper.js"></script>
 </body>
 </html>
