Signed-off-by: kkoba23 <kobayashi@k-relations.com>

--- a/full-crop-box.html
+++ b/full-crop-box.html
@@ -64,7 +64,7 @@ img {
 		<input type="file" class="avatar-input" id="avatarInput"
 			name="avatar_file">
 		<div>
-			<img id="image" src="img/responsive_img.jpg" alt="Picture">
+			<img id="image" src="img/figure_2017.jpg" alt="Picture">
 		</div>
 		<div class="circle-guide"></div>
 	</div>
