--- a/index.html
+++ b/index.html
@@ -1,87 +1,80 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 <head>
 <meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Story Drill</title>
-<!-- BootstrapのCSS読み込み -->
-<link href="css/bootstrap.min.css" rel="stylesheet">
-<!-- <link href="css/bootstrap-theme.min.css" rel="stylesheet"> -->
-<!-- jQuery読み込み -->
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"
-	type="text/javascript"></script>
-<!-- BootstrapのJS読み込み -->
-<script src="js/bootstrap.min.js" type="text/javascript"></script>
-<script src="js/storydrill.js" type="text/javascript"></script>
-
-<style type="text/css">
-body {
-	padding-top: 45px;
-}
-.navbar {
-  min-height: 40px !important
-}
-.navbar-brand {
-  height: 40px;
-  padding: 10px 15px;
+<meta http-equiv="x-ua-compatible" content="ie=edge">
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<title>Cropper</title>
+<link rel="stylesheet" href="css/cropper.css">
+<link rel="stylesheet" href="css/fix.css">
+<style>
+.container {
+	user-select: none;
+	width: 360px;
+	/* 	height: auto; */
+	margin: 40px auto;
 }
 
-.navbar-nav > li > a {
-  padding-top: 10px !important;
-  padding-bottom: 10px !important;
+.circle-guide {
+	pointer-events: none;
+	width: 300px;
+	height: 300px;
+	border-radius: 50%;
+	border: 2px dashed white;
+	position: relative;
+	top: -330px;
+	left: 30px;
+}
+
+img {
+	overflow: hidden;
+	width: 360px; /* トリミングしたい枠の幅 */
+	height: 360px; /* トリミングしたい枠の高さ */
+	position: center;
+}
+
+
+.cropper-view-box, .cropper-face {
+	border-radius: 50%;
 }
 </style>
-
 </head>
 <body>
-	<nav class="navbar navbar-default navbar-fixed-top">
-		<div class="navbar-header">
-			<div class="container">
-				<!-- 				<div class="collapse navbar-collapse"> -->
-				<span class="navbar-brand">ストーリードリル for GitHub</span>
-				<span class="navbar-right">
-				<button type="button" class="btn btn-primary navbar-right" id="timer">START</button>
-				</span>
-				<!-- 				</div> -->
-			</div>
-		</div>
-	</nav>
+
 	<div class="container">
+		<h1>缶バッチ アプリ</h1>
+		<span class="fileupImg">画像をアップロード</span>
+		<!-- 		 <input type="file"accept='image/*' name="img"> -->
+		<!-- 		 <input type="file" class="avatar-input" id="avatarInput" name="avatar_file"> -->
+		<input type="file" class="avatar-input" id="avatarInput" name="img">
+		<div>
+				<img id="image" src="img/figure_2017.jpg" class="thumb" alt="Picture" />
 
-		<br> <br>
-		<table
-			class="table table-striped table-bordered table-hover table-condensed">
-			<tbody>
-				<tr>
-					<td class="col-sm-4">主人公の年齢</td>
-					<td id="list1" class="col-sm-8"></td>
-				</tr>
-				<tr>
-					<td>主人公の立場</td>
-					<td id="list2"></td>
-				</tr>
-				<tr>
-					<td>きっかけとなる出来事</td>
-					<td id="list3"></td>
-				</tr>
-				<tr>
-					<td>主な舞台</td>
-					<td id="list4"></td>
-				</tr>
-				<tr>
-					<td>ジャンル</td>
-					<td id="list5"></td>
-				</tr>
-
-			</tbody>
-		</table>
-		<div class="form-group">
-			<!-- 			<label for="textarea">ここにログラインを書く</label> -->
-			<textarea class="form-control" rows="10" placeholder="ログライン"
-				id="textarea"></textarea>
+<!-- 			<img id="image" src="img/figure_2017.jpg" class="thumb" alt="Picture"> -->
 		</div>
+
+		<div class="circle-guide"></div>
 	</div>
+	<!-- Scripts -->
+	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
+	<script type="text/javascript" src="js/fix.js"></script>
+	<script>
+		$(function() {
+			$('#image').cropper({
+				viewMode : 3,
+				aspectRatio : 1,
+				dragMode : 'move',
+				autoCropArea : 1,
+				restore : true,
+				modal : true,
+				guides : false,
+				highlight : true,
+				cropBoxMovable : false,
+				cropBoxResizable : false
+			});
+		});
+	</script>
+	<script src="js/cropper.js"></script>
 </body>
 </html>
