--- a/upload.html
+++ b/upload.html
@@ -10,7 +10,7 @@
 <link type="text/css" href="css/fix.css" rel="stylesheet" media="all" />
 <link type="text/css" href="css/font-awesome.css" rel="stylesheet" media="all" />
 	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
-<script type="text/javascript" src="js/fix.js"></script>
+<script type="text/javascript" src="js/fix_BU.js"></script>
 
 </head>
 
