--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<div class="container">
 		<p align="left">缶バッチ作成用トリミングアプリ</p>
 		<div align="center">
-			<span class="fileupImg btn">画像を選択</span>
+			<span class="fileupImg btn" >　画像を選択　</span>
 			<input type="file" class="avatar-input" id="avatarInput" name="img">
 		</div>
 		<div class="rect">
@@ -52,11 +52,7 @@
 				<span id="dropBtn" class="btn">ここにドロップ</span>
 			</div>
 			<div style="float: left">
-				<span id="mailBtn"><a class="btn" id="mailLink" href="mailto:info@k-relations.com?subject=缶バッチ注文&amp;body=本文" name='mail'>画像を表示</a></span>
-<!-- 				<form> -->
-<!-- 					<input type="button" value="メールで注文する" -->
-<!-- 						onclick="location.href='mailto:info@k-relations.com?subject=缶バッチ注文&amp;body=本文'" name="mail"> -->
-<!-- 				</form> -->
+				<span id="mailBtn"><a class="btn" id="mailLink" href="#">画像を表示</a></span>
 			</div>
 			<div style="float: right">
 				<span id="cropBtn"><a class="filedownImg btn" href="#">決定</a></span>
